[package]
name = "mus_search"
version = "0.1.0"
edition = "2021"

[[bin]]
path="src/main.rs"
name="mus_search"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.8"
lopdf = "0.32.0"
pdf-extract = "0.7.7"
rayon = "1.10.0"
rust-stemmers = "=0.1.0"
serde_json = "1.0.117"
stop-words = "=0.1.5"
